# learn-rl-with-mario

./: .gitignore  README.md  TRAINING_REFACTOR_PLAN.md  config.py  play_dreamerv3.py  prompts.md  pyproject.toml  requirements.txt  test.py  train.py  train_autoencoder_discrete.py  train_autoencoder_discrete_no_h.py  train_dreamerv3.py
algorithms/: __init__.py  base.py  ppo.py
algorithms/dreamer-v3/: design.md
algorithms/dreamer_v3/agent/: actor_critic.py
algorithms/dreamer_v3/envs/: mario_env.py
algorithms/dreamer_v3/models/: distributions.py  networks.py  world_model.py
algorithms/dreamer_v3/training/: replay_buffer.py  trainer.py
algorithms/dreamer_v3/utils/: logger.py
algorithms/ppo/: base.py  networks.py  ppo.md  ppo.py  tester.py  trainer.py
configs/: dreamerv3_config.yaml  ppo_config.py
enviroments/: __init__.py  mario_env.py  parallel_envs.py  preprocessing.py  replay_buffer.py
networks/: __init__.py  networks.py
test/: data_collection_test.py  test_data_pipeline.py  test_env.py  test_reward_shaping.py  train_autoencoder_discrete.py
usage/: ppo.md
utils/: __init__.py  logger.py  preprocessing.py  replay_buffer.py
